--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     background: lightgray;
     color: white;
     background-size: 100vw 100vh;
+   
 }
 
 .blackFont {
@@ -11,4 +12,14 @@ body {
 a {
     text-decoration: none;
     color: white;
+}
+
+
+.list{
+    overflow: hidden;
+    overflow-y:scroll;
+}
+.menu{
+    
+    overflow-y: scroll;
 }
